# custom_print_test

./: CMakeLists.txt  README.md
include/: example.h  measure_performance.h
lib/custom_print/: CMakeLists.txt
lib/custom_print/include/: my_print.h  my_printf.h
lib/custom_print/src/: my_print.cpp  my_printf.cpp
src/: example.cpp  main.cpp  measure_performance.cpp
